tests/types/valid/null_widening_list.mochi
// Snapshot: null leaks into a typed list position.
// See MEP 4 and MEP 7.
let xs: list<int> = null
